--- a/public/style.css
+++ b/public/style.css
@@ -85,3 +85,26 @@ ul ul a {
     padding-left: 30px !important;
     background: #6d7fcc;
 }
+
+.code {
+    background: black;
+    color: white;
+    padding: 10px;
+    width: 100%;
+    float: left;
+    margin: 10px -10px 10px 10px;
+    line-height: 25px;
+    word-spacing: 10px;
+}
+
+.php {
+    color: yellowgreen;
+}
+
+.json {
+    color: orange;
+}
+
+.console {
+    color: lightsteelblue;
+}
